@@ -1,7 +1,7 @@
 language: perl
 
 install:
-  - curl https://perl5-alien.github.io/static/travis/install-system-dontpanic.sh | bash -
+  - curl https://alienfile.org/travis/install-system-dontpanic.sh | bash -
   - cpanm --installdeps -n .
 
 perl:
