@@ -1,5 +1,7 @@
 Revision history for Perl module Acme::Alien::DontPanic.
 
+  - Switch to new alienfile.org for source
+
 0.044 2017-08-23 13:46:23 -0400
   - Require Alien::Base 1.01
   - Require Alien::Base::ModuleBuild 0.044
